@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-24T16:15:48Z",
-  "count_outdated" : 78,
-  "uniques_outdated" : 61,
+  "timestamp" : "2024-04-28T08:17:16Z",
+  "count_outdated" : 79,
+  "uniques_outdated" : 62,
   "count" : 81,
   "uniques" : 63,
   "clones" : [
-    {
-      "timestamp": "2024-04-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-24T00:00:00Z",
       "count": 2,
